// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/mfa/setup > should match snapshot with required text 1`] = `
<div>
  <div>
    <form
      class="form-group"
    >
      <p>
        <strong>
          Multi-factor authentication is required on test.
        </strong>
      </p>
      <p>
        1. Scan the QR code below using an authenticator app of your choice, such as Google Authenticator, Microsoft Authenticator app, or 1Password.
      </p>
      <p>
        Alternatively, enter the secret key displayed below into the authenticator app manually.
      </p>
      <div
        class="form-group"
      >
        <div
          class="col-sm-12"
        >
          <img
            alt="qr code image"
            src="data:image/png;base64,qrcode"
            style="max-height: 170px;"
          />
        </div>
      </div>
      <br />
      <div
        class="form-group"
      >
        <p
          class="col-sm-12"
        >
          Secret: generated secret
        </p>
      </div>
      <p>
        2. Enter the code generated by the authenticator app in the field below.
      </p>
      <p>
        <input
          class="form-control"
          placeholder="MFA Code"
        />
      </p>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>
</div>
`;

exports[`components/mfa/setup > should match snapshot without required text 1`] = `
<div>
  <div>
    <form
      class="form-group"
    >
      <p>
        1. Scan the QR code below using an authenticator app of your choice, such as Google Authenticator, Microsoft Authenticator app, or 1Password.
      </p>
      <p>
        Alternatively, enter the secret key displayed below into the authenticator app manually.
      </p>
      <div
        class="form-group"
      >
        <div
          class="col-sm-12"
        >
          <img
            alt="qr code image"
            src="data:image/png;base64,qrcode"
            style="max-height: 170px;"
          />
        </div>
      </div>
      <br />
      <div
        class="form-group"
      >
        <p
          class="col-sm-12"
        >
          Secret: generated secret
        </p>
      </div>
      <p>
        2. Enter the code generated by the authenticator app in the field below.
      </p>
      <p>
        <input
          class="form-control"
          placeholder="MFA Code"
        />
      </p>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Save
      </button>
    </form>
  </div>
</div>
`;
